# Writent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  start.sh
backend/: .env.example  config.py  logging_config.py  main.py  pyproject.toml
backend/agents/: __init__.py  citation_collector.py  formatter.py  ideation.py  media_collector.py  notes_agent.py  orchestrator.py  research_planner.py  researcher.py  reviewer.py  social_media.py  writer.py
backend/api/: articles.py  health.py  ws.py
backend/models/: __init__.py  article.py  database.py  schemas.py
backend/prompts/: formatter.py  ideation.py  notes.py  research.py  research_planner.py  review.py  social.py  writing.py
backend/tools/: __init__.py  browser.py  llm.py  media.py  search.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Navbar.tsx  PipelineTracker.tsx  SessionChatPanel.tsx  SessionNotesPanel.tsx
frontend/src/components/article/: ArticleCard.tsx  ChatEditor.tsx  CitationsPanel.tsx  ExportPanel.tsx  NotesPanel.tsx  ResearchPanel.tsx
frontend/src/components/editor/: ArticlePreview.tsx
frontend/src/components/pipeline/: PipelineTracker.tsx
frontend/src/components/social/: SocialPreview.tsx
frontend/src/components/social-preview/: SocialPreview.tsx
frontend/src/components/ui/: thinking-indicator.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
(+7 files in other folders)
